.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bauhaus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bauhaus
  template:
    metadata:
      labels:
        app: bauhaus
    spec:
      containers:
        - name: bauhaus
          image: nicolaslaval/bauhaus:3.0.8
