.kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bauhaus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - bauhaus.todo.fr
  rules:
    - host: bauhaus.todo.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: bauhaus
              servicePort: http
